# cli-validator

./: .gitignore  README.md  pyproject.toml
src/cli_validator/: __init__.py  cmd_tree.py  command.py  exceptions.py  result.py  script.py  validator.py
src/cli_validator/cmd_meta/: __init__.py  loader.py  parser.py  util.py  validator.py
src/cli_validator/cmd_meta/aio/: __init__.py
src/cli_validator/cmd_meta/loader/: __init__.py
src/cli_validator/cmd_meta/loader/aio/: __init__.py
src/cli_validator/cmd_tree/: __init__.py  loader.py  parser.py
src/cli_validator/loader/: __init__.py  core_repo.py  extension.py  utils.py
src/cli_validator/loader/cmd_meta/: __init__.py
src/cli_validator/loader/cmd_meta/aio/: __init__.py
src/cli_validator/meta/: __init__.py  parser.py  retriever.py  validator.py
src/cli_validator/repo/: __init__.py  base.py  core_repo.py  extension.py  utils.py
tests/: test_cmd_meta_parser.py  test_cmd_meta_validator.py  test_loader.py  test_repo.py  test_validator.py
